Fix setting view on smaller displays

--- a/gui/src/app/components/settings-taskbar/settings-taskbar-tag-item/settings-taskbar-tag-item.component.scss
+++ b/gui/src/app/components/settings-taskbar/settings-taskbar-tag-item/settings-taskbar-tag-item.component.scss
@@ -20,7 +20,7 @@
 .item {
     margin: auto;
     padding: 3px;
-    font-size: x-large;
+    font-size: 1vw;
 }
 
 .rating {
