--- a/gui/src/app/components/settings-taskbar/settings-taskbar.component.scss
+++ b/gui/src/app/components/settings-taskbar/settings-taskbar.component.scss
@@ -46,3 +46,7 @@
     overflow: auto !important;
 }
 
+.title {
+  font-size: 1.3vw;
+  font-style: bold;
+}
